fixed issues with css (too small text and centering)

--- a/Designs/Design-3/style.css
+++ b/Designs/Design-3/style.css
@@ -6,7 +6,6 @@
     background: var(--background);
     filter: var(--filter);
     box-shadow: var(--box-shadow);
-    max-width: 1080px;
     box-sizing: border-box;
     transition: color 1s;
     transition: background 1.5s;
@@ -196,7 +195,11 @@ filter: var(--light-filter);
 
 
 
-
+h6 {
+    font-weight: 500;
+    font-size: 0.9rem;
+    line-height: 2rem;
+  }
 
 
 
@@ -320,8 +323,12 @@ filter: var(--light-filter);
               display: flex;
               justify-content: space-evenly;
               gap: 4rem;
+             
+              
               
           } 
+
+        
       
       
       .weekdays {
@@ -356,12 +363,21 @@ filter: var(--light-filter);
 @media (min-width: 540px) {
 
 
-.weather-app {
+.weather-app { 
  max-width: 540px;
  min-height: 902px;
  height: 902px;
  border-radius: 10px;
+
       }
+weather-app-container {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+      
+      
+      
 
 html,
 body {
@@ -389,3 +405,5 @@ body {
 
 
 }
+
+
